# gamesapi

./: pyproject.toml
games/: models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py
gamesapi/: settings.py  urls.py
