[tool.poetry]
name = "gamesapi"
version = "0.1.0"
description = ""
authors = ["nickmwangemi <nickmwangemi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
djangorestframework = "^3.12.4"
django-utils-six = "^2.0"
httpie = "^2.4.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
